# HaremalCTRL

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: main.rs
src/tabs/: appearance.rs  applications.rs  desktop.rs  devices.rs  mod.rs  region.rs  update.rs
